[project]
name = "py_ai_dev_utils"
version = "0.1.0"
description = "Handle the solution data provided by HORSES3D CFD solver."
authors = [
    {name = "Pablo Alcañiz", email = "alcaniz.pablo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
lint = [
    "pyrefly>=0.35.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_ai_dev_utils"]

[tool.hatch.build.targets.sdist]
include = [
    "/py_ai_dev_utils",
    "README.md",
    "LICENSE"
]

